--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -42,6 +42,9 @@
      <Compile Include="Assets\Scripts\HeroStateMachine.cs" />
      <Compile Include="Assets\Scripts\BattleStateMachine.cs" />
      <Compile Include="Assets\Scripts\EnemySelectButton.cs" />
+     <Compile Include="Assets\Scripts\Attacks\BaseAttack.cs" />
+     <Compile Include="Assets\Scripts\Attacks\PhysicalAttack\Smash.cs" />
+     <Compile Include="Assets\Scripts\Attacks\PhysicalAttack\Slash.cs" />
     <Reference Include="UnityEngine">
         <HintPath>C:\Program Files\Unity 2020.3.22f1\Editor\Data\Managed\UnityEngine\UnityEngine.dll</HintPath>
     </Reference>
