--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -37,14 +37,15 @@
   </PropertyGroup>
   <ItemGroup>
      <Compile Include="Assets\Scripts\EnemyStateMachine.cs" />
+     <Compile Include="Assets\Scripts\Attacks\PhysicalAttack\Slash.cs" />
      <Compile Include="Assets\Scripts\BaseClass.cs" />
      <Compile Include="Assets\Scripts\TurnHandler.cs" />
      <Compile Include="Assets\Scripts\HeroStateMachine.cs" />
-     <Compile Include="Assets\Scripts\BattleStateMachine.cs" />
-     <Compile Include="Assets\Scripts\EnemySelectButton.cs" />
-     <Compile Include="Assets\Scripts\Attacks\BaseAttack.cs" />
      <Compile Include="Assets\Scripts\Attacks\PhysicalAttack\Smash.cs" />
-     <Compile Include="Assets\Scripts\Attacks\PhysicalAttack\Slash.cs" />
+     <Compile Include="Assets\Scripts\BattleStateMachine.cs" />
+     <Compile Include="Assets\Scripts\Attacks\BaseAttack.cs" />
+     <Compile Include="Assets\Scripts\EnemySelectButton.cs" />
+     <Compile Include="Assets\Scripts\HeroPanelStats.cs" />
     <Reference Include="UnityEngine">
         <HintPath>C:\Program Files\Unity 2020.3.22f1\Editor\Data\Managed\UnityEngine\UnityEngine.dll</HintPath>
     </Reference>
