--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -37,8 +37,12 @@
   </PropertyGroup>
   <ItemGroup>
      <Compile Include="Assets\Scripts\EnemyStateMachine.cs" />
+     <Compile Include="Assets\Scripts\Attacks\MagicAttack\Fire1.cs" />
+     <Compile Include="Assets\Scripts\Attacks\MagicAttackButtonScript.cs" />
+     <Compile Include="Assets\Scripts\Attacks\MagicAttack\Thunder1.cs" />
      <Compile Include="Assets\Scripts\Attacks\PhysicalAttack\Slash.cs" />
      <Compile Include="Assets\Scripts\BaseClass.cs" />
+     <Compile Include="Assets\Scripts\Attacks\MagicAttack\Ice1.cs" />
      <Compile Include="Assets\Scripts\TurnHandler.cs" />
      <Compile Include="Assets\Scripts\HeroStateMachine.cs" />
      <Compile Include="Assets\Scripts\Attacks\PhysicalAttack\Smash.cs" />
@@ -46,10 +50,8 @@
      <Compile Include="Assets\Scripts\BattleStateMachine.cs" />
      <Compile Include="Assets\Scripts\Attacks\BaseAttack.cs" />
      <Compile Include="Assets\Scripts\EnemySelectButton.cs" />
-     <Compile Include="Assets\Scripts\Attacks\MagicAttack\Fire1.cs" />
-     <Compile Include="Assets\Scripts\Attacks\MagicAttack\Ice1.cs" />
-     <Compile Include="Assets\Scripts\Attacks\MagicAttack\Thunder1.cs" />
-     <Compile Include="Assets\Scripts\Attacks\MagicAttackButtonScript.cs" />
+     <Compile Include="Assets\Scripts\PlayerController.cs" />
+     <Compile Include="Assets\Scripts\GameManager.cs" />
     <Reference Include="UnityEngine">
         <HintPath>C:\Program Files\Unity 2020.3.22f1\Editor\Data\Managed\UnityEngine\UnityEngine.dll</HintPath>
     </Reference>
