--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -49,10 +49,11 @@
      <Compile Include="Assets\Scripts\Attacks\PhysicalAttack\Smash.cs" />
      <Compile Include="Assets\Scripts\PlayerController.cs" />
      <Compile Include="Assets\Scripts\HeroPanelStats.cs" />
+     <Compile Include="Assets\Scripts\SceneChanger.cs" />
      <Compile Include="Assets\Scripts\BattleStateMachine.cs" />
      <Compile Include="Assets\Scripts\Attacks\BaseAttack.cs" />
      <Compile Include="Assets\Scripts\EnemySelectButton.cs" />
-     <Compile Include="Assets\Scripts\SceneChanger.cs" />
+     <Compile Include="Assets\Scripts\RegionData.cs" />
     <Reference Include="UnityEngine">
         <HintPath>C:\Program Files\Unity 2020.3.22f1\Editor\Data\Managed\UnityEngine\UnityEngine.dll</HintPath>
     </Reference>
